--- a/race-score-react/javascript/package.json
+++ b/race-score-react/javascript/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.27.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.1.0",
     "react-datepicker": "^4.5.0",
     "react-day-picker": "^7.4.0",
